# osproject2

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: cpu.h  memory.h  process.h  runqueue.h
src/: cpu.cpp  main.cpp  memory.cpp  process.cpp  runqueue.cpp
